Fix backward compatibility of a new resource form
Resource/fence agent form has to use inline styles to cover the case
when it is displayed in an older GUI that does not have styles for the
form in its style.css file.

--- a/pcsd/public/css/style.css
+++ b/pcsd/public/css/style.css
@@ -743,13 +743,11 @@ li.menuheader {
 }
 
 .long_desc_div {
-  display: none;
-  font-size: 12px;
-  max-width: 450px;
+  max-width: 450px !important;
 }
 #new_resource_agent .long_desc_div {
-  max-width: 350px;
+  max-width: 350px !important;
 }
 #new_stonith_agent .long_desc_div {
-  max-width: 350px;
+  max-width: 350px !important;
 }
